--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   <div class="card md-4 mt-4">
                     <img class="card-img-top img-fluid" src="img/ceremonials.jpg" alt="Card image cap">
                     <div class="card-block">
-                      <p class="card-text">The second studio album by Florence + The Machine whcih was released on 28 October 2011.</p>
+                      <p class="card-text">The second studio album by Florence + The Machine which was released on 28 October 2011.</p>
                     </div>
                   </div>
                 </div>
