--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div id="beginning" class="text-white text-center">
         <div class="container">
           <div class="col-sm-12">
-            <img src="img/florence.jpg" id="florence" class="img-fluid" alt="Picture of Florence Welch">
-            <h2 class="mb-4 text-white"><strong class="title">Florence + The Machine</strong></h2>
+            <img src="img/flo.jpg" id="florence" class="img-fluid" alt="Picture of Florence Welch">
+            <h2 class="text-white"><strong class="title">Florence + The Machine</strong></h2>
             <p class="lead pb-4 space-out"><em>“Whispering like it's a secret, only to condemn the one who hears it, with a heavy heart.” </em> ― <strong>Florence Welch</strong></p>
           </div>
         </div>
