--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             
           <div id="footer" class="row">
            <div class="container text-center text-white">
-              <div class="col-sm-12 pt-3"><p>2017 &copy; created by Steven Ang.<br>
+              <div class="col-sm-12 pt-3"><p><script>document.write(new Date().getFullYear());</script> &copy; created by Steven Ang.<br>
                 This site was created for my freeCodeCamp project.</p>
              </div>  
            </div>
