--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
     </div> <!-- /beginning -->
     
-    <div id="about"> <!-- about -->
+    <div id="about" class="container-fluid"> <!-- about -->
       <div class="container text-white">
         <div class="row py-4">
           <div class="col-lg-12">
