Update the correct image src

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="container">
         <div class="col-sm-12">
           <img
-            src="img/flo.jpg"
+            src="img/florence.jpg"
             id="florence"
             class="img-fluid"
             alt="Picture of Florence Welch"
