--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="Description" content="A Tribute to Florence And The Machine" />
-    <!-- bootstrap css -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:400,700"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -24,16 +27,18 @@
             class="img-fluid"
             alt="Picture of Florence Welch"
           />
-          <h2 class="text-white">
-            <strong class="title">Florence + The Machine</strong>
-          </h2>
-          <p class="lead pb-4 space-out">
-            <em
-              >“Whispering like it's a secret, only to condemn the one who hears
-              it, with a heavy heart.”
-            </em>
-            ― <strong>Florence Welch</strong>
-          </p>
+          <div class="beginning-text">
+            <h2 class="text-white title">
+              Florence + The Machine
+            </h2>
+            <p class="lead pb-4 space-out">
+              <em
+                >“Whispering like it's a secret, only to condemn the one who
+                hears it, with a heavy heart.”
+              </em>
+              <strong class="beginning-text-artist"> ― Florence Welch</strong>
+            </p>
+          </div>
         </div>
       </div>
     </div>
@@ -62,6 +67,7 @@
                 class="btn btn-outline-info btn-lg"
                 href="https://en.wikipedia.org/wiki/Florence_and_the_Machine"
                 target="_blank"
+                rel="noopener"
                 >Click here to learn more</a
               >
             </div>
