Remove document.write in html

--- a/index.html
+++ b/index.html
@@ -161,9 +161,7 @@
               <div class="container text-center text-white">
                 <div class="col-sm-12 pt-3">
                   <p>
-                    <script>
-                      document.write(new Date().getFullYear());
-                    </script>
+                    <span id="date"></span>
                     &copy; created by Steven Ang.<br />
                     This site was created for my freeCodeCamp project.
                   </p>
@@ -178,5 +176,6 @@
 
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
