--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             alt="Picture of Florence Welch"
           />
           <div class="beginning-text">
-            <h2 class="text-white title">
+            <h2 class="text-white about-title">
               Florence + The Machine
             </h2>
             <p class="lead pb-4 space-out">
@@ -49,7 +49,7 @@
       <div class="container text-white">
         <div class="row py-4">
           <div class="col-lg-12">
-            <h3 class="mb-4">Florence + The Machine</h3>
+            <h3>Florence + The Machine</h3>
             <p>
               Florence and the Machine (styled as Florence + The Machine) are an
               English indie rock band that formed in London in 2007, consisting
@@ -75,7 +75,7 @@
           </div>
 
           <div class="col-lg-12">
-            <h3 class="mb-4">Albums</h3>
+            <h3>Albums</h3>
             <p>
               The band's debut studio album, Lungs, was released on 6 July 2009,
               and held the number-two position for its first five weeks on the
@@ -106,7 +106,7 @@
             <hr class="mb-4" />
             <div class="container">
               <div class="row">
-                <div class="col-lg-4 mt-4">
+                <div class="col-lg-4">
                   <div class="card md-4">
                     <img
                       class="card-img-top img-fluid"
@@ -123,7 +123,7 @@
                 </div>
 
                 <div class="col-lg-4">
-                  <div class="card md-4 mt-4">
+                  <div class="card md-4">
                     <img
                       class="card-img-top img-fluid"
                       src="img/ceremonials.jpg"
@@ -138,7 +138,7 @@
                   </div>
                 </div>
 
-                <div class="col-lg-4 mt-4">
+                <div class="col-lg-4">
                   <div class="card md-4">
                     <img
                       class="card-img-top img-fluid"
@@ -154,7 +154,10 @@
                   </div>
                 </div>
               </div>
-              <hr class="mt-5" />
+            </div>
+
+            <div>
+              <hr class="mt-4" />
             </div>
 
             <div id="footer" class="row">
